add my own server config file to prevent overriding by other developers, make your own config file :D, :P

--- a/odoo/odoo-server.conf
+++ b/odoo/odoo-server.conf
@@ -5,5 +5,5 @@ db_host = localhost
 db_port = 5432
 db_user = odoo
 db_password = odoo
-addons_path = /home/n1k/dev/odoo-10/odoo/addons,/home/n1k/dev/odoo-10/odoo/custom
+addons_path = ; Enter the path to your local module path!!!!!
 ;xmlrpc_port = 80
