--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ mock==2.0.0
 ofxparse==0.16
 passlib==1.6.5
 Pillow==3.4.1
-psutil==4.3.1
+psutil
 psycogreen==1.0
 psycopg2==2.7.1
 pydot==1.2.3
@@ -23,7 +23,7 @@ pyPdf==1.13
 pyserial==3.1.1
 Python-Chart==1.39
 python-dateutil==2.5.3
-python-ldap==2.4.27
+python-ldap
 python-openid==2.2.5
 pytz==2016.7
 pyusb==1.0.0
@@ -40,3 +40,161 @@ wsgiref==0.1.2
 XlsxWriter==0.9.3
 xlwt==1.1.2
 xlrd==1.0.0
+astroid==1.4.8
+pylint==1.6.4
+pylint-plugin-utils==0.2.4
+docutils==0.12
+lxml>=2.3.2
+Pygments==2.0.2
+restructuredtext_lint==0.12.2
+isort==4.2.5
+whichcraft
+rfc3986
+Babel	2.3.4	2.5.3
+BeautifulSoup	3.2.1	3.2.1
+Jinja2	2.8	2.10
+Mako	1.0.4	1.0.7
+MarkupSafe	0.23	1.0
+PAM	0.4.2	0.1.4
+Pillow	3.4.1	5.0.0
+PyChart	1.39	1.39
+PyJWT	1.3.0	1.5.3
+PyPDF2	1.26.0	1.26.0
+PyWebDAV	0.9.8	0.9.8
+PyYAML	3.12	3.12
+Pygments	2.0.2	2.2.0
+Python-Chart	1.39	1.39
+Twisted	16.0.0	17.9.0
+Voodoo	1.4.2	1.4.2
+Werkzeug	0.11.11	0.14.1
+XlsxWriter	0.9.3	1.0.2
+ZSI	2.1a1	2.0-rc3
+argparse	1.2.1	1.4.0
+astroid	1.4.8	1.6.1
+attrs	15.2.0	17.4.0
+backports.functools-lru-cache	1.5
+beautifulsoup4	4.6.0	4.6.0
+blinker	1.3	1.4
+bobtemplates.odoo	1.2.0	1.2.0
+cachetools	2.0.1	2.0.1
+certifi	2017.7.27.1	2018.1.18
+chardet	3.0.4	3.0.4
+cmislib	0.6.0	0.6.0
+cobble	0.1.3	0.1.3
+colorama	0.3.9	0.3.9
+configglue	1.1.2	1.1.3.post0
+configobj	5.0.6	5.0.6
+configparser	3.5.0	3.5.0
+cryptography	1.2.3	2.1.4
+debtags	2.0
+decorator	4.0.10	4.2.1
+defer	1.0.6	1.0.4
+dirspec	13.10	13.08
+docutils	0.12	0.14
+duplicity	0.7.6	0.7.14
+ebaysdk	2.1.4	2.1.5
+ecdsa	0.13	0.13
+enum34	1.1.2	1.1.6
+feedparser	5.2.1	5.2.1
+funcsigs	1.0.2	1.0.2
+future	0.16.0	0.16.0
+gdata	2.0.18	2.0.18
+gevent	1.1.2	1.3a1
+greenlet	0.4.10	0.4.13
+gyp	0.1	0.1
+html2text	2016.9.19	2018.1.9
+httplib2	0.9.1	0.10.3
+idna	2.6	2.6
+ipaddress	1.0.16	1.0.19
+iso8601	0.1.12	0.1.12
+isort	4.2.5	4.3.3
+javascript	2015.32.59	2015.32.59
+jcconv	0.2.3	0.2.3
+lazy-object-proxy	1.3.1	1.3.1
+linecache2	1.0.0	1.0.0
+lockfile	0.12.2	0.12.2
+logilab-common	1.4.1	1.4.1
+lxml	3.5.0	4.1.1
+mammoth	1.4.4	1.4.4
+mccabe	0.6.1	0.6.1
+mock	2.0.0	2.0.0
+mr.bob	0.1.2	0.1.2
+nemo-emblems	3.4.1
+netifaces	0.10.4	0.10.6
+nodejs	0.1.1	0.1.1
+num2words	0.5.4	0.5.6
+oauthlib	1.0.3	2.0.6
+oca-pylint-plugin	1.11.2	1.11.2
+odoo-data	0.1	0.1
+odoomaker	0.0.0	0.0.0
+odootools	0.1.0	0.1.0
+ofxparse	0.16	0.17
+oneconf	0.3.9
+optional-django	0.1.0	0.3.0
+paramiko	1.16.0	2.4.0
+passlib	1.6.5	1.7.1
+pbr	1.8.0	3.1.1
+pdfconv	1.0.10	1.0.10
+pexpect	4.0.1	4.3.1
+pip	9.0.1	9.0.1
+piston-mini-client	0.7.5	0.7.5
+protobuf	2.6.1	3.5.1
+psutil	3.4.2	5.4.3
+psycogreen	1.0	1.0
+psycopg2	2.7.1	2.7.3.2
+ptyprocess	0.5	0.5.2
+pyOpenSSL	0.15.1	17.5.0
+pyPdf	1.13
+pyasn1	0.1.9	0.4.2
+pyasn1-modules	0.0.7	0.2.1
+pycrypto	2.6.1	2.6.1
+pycups	1.9.73	1.9.73
+pycurl	7.43.0	7.43.0.1
+pydot	1.2.3	1.2.4
+pygobject	3.20.0	3.27.1
+pyinotify	0.9.6	0.9.6
+pylint	1.6.4	1.8.2
+pylint-odoo	1.9.3	1.9.3
+pylint-plugin-utils	0.2.4	0.2.6
+pyparsing	2.1.10	2.2.0
+pyparted	3.10.7	3.10.7
+pyserial	3.1.1	3.4
+pysmbc	1.0.15.5	1.0.15.8
+python-apt	1.1.0b1	0.7.8
+python-dateutil	2.5.3
+python-debian	0.1.27
+python-ldap	2.4.22
+python-openid	2.2.5
+python-stdnum	1.2
+python-xlib	0.14
+pytz	2016.7
+pyusb	1.0.0
+pyxdg	0.25	
+qrcode	5.3
+reportlab	3.3.0
+requests	2.11.1
+restructuredtext-lint	0.12.2
+rfc3986	1.1.0
+roman	2.0.0
+service-identity	16.0.0
+setproctitle	1.1.8
+setuptools	36.6.0
+setuptools-git	1.1
+setuptools-odoo	2.0.2.post1
+simplejson	3.8.1
+six	1.10.0
+suds-jurko	0.6
+tend-odoo	0.0.0
+traceback2	1.4.0
+uTidylib	0.2
+unittest2	1.1.0
+urllib3	1.22
+vatnumber	1.2
+vboxapi	1.0
+vobject	0.9.3
+whichcraft	0.4.1
+wrapt	1.10.11
+wsgiref	0.1.2
+xlrd	1.0.0
+xlwt	1.1.2
+zope.interface	4.1.3
