backend: redesign sidebar

--- a/odoo/nik@gambit.conf
+++ b/odoo/nik@gambit.conf
@@ -8,4 +8,4 @@ db_password = odoo
 ;addons_path = /home/n1k/dev/UdooX/odoo/addons,/home/n1k/dev/UdooX/odoo/custom,/home/n1k/dev/UdooX/odoo/unite/dev,/home/n1k/dev/UdooX/odoo/unite/acc,/home/n1k/dev/UdooX/odoo/unite/live
 ;xmlrpc_port = 80
 
-addons_path = /home/n1k/dev/UdooX/odoo/addons,/home/n1k/dev/UdooX/odoo/unite/dev,/home/n1k/dev/UdooX/odoo/testModules
+addons_path = /home/n1k/dev/UdooX/odoo/addons,/home/n1k/dev/UdooX/odoo/unite/dev
