--- a/.pylintrc
+++ b/.pylintrc
@@ -5,7 +5,7 @@
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
-init-hook=init-hook='import sys; sys.path.append("/home/n1k/dev/python/UduuX/odoo")'
+init-hook='import sys; sys.path.append("/home/n1k/dev/python/UduuX/odoo")'
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
